# Checkers

./: .gitignore  CMakeLists.txt  README.md  output.txt
examples/: .deepspeed_env  dp_llama_hostfile  ds_config_zero3.json  output.txt  train_llama3.py
examples/FSDP_ZeRO3/: dp_llama_hostfile  output.txt  script_llama_zero3.sh  train_llama3.py  tuolumne1009-python-841374.core  tuolumne1009-python-841375.core  tuolumne1011-python-1092989.core  tuolumne1011-python-1092990.core  tuolumne1013-python-1154899.core  tuolumne1013-python-1154900.core  tuolumne1014-python-958521.core  tuolumne1014-python-958522.core  tuolumne1036-python-466048.core  tuolumne1036-python-466049.core  tuolumne1038-python-468550.core  tuolumne1038-python-468551.core  tuolumne1039-python-457039.core  tuolumne1039-python-457040.core  tuolumne1044-python-608967.core  tuolumne1044-python-608968.core  tuolumne1044-python-608969.core  tuolumne1045-python-80987.core  tuolumne1045-python-80988.core  tuolumne1048-python-733378.core  tuolumne1048-python-733379.core
include/checkers/: ANSCompressor.hpp  MemoryManager.hpp  TensorAnalyzer.hpp  TensorFingerprint.hpp  TensorResource.hpp  api.hpp  logging.hpp
runtime/: Utils.cpp  Utils.hpp
scripts/llama-3-8b/: experiment_1.py  experiment_2.py  experiment_2_1.py  experiment_2_2.py  memory_dump.txt  sum_bytes.py  test_distributions.py
scripts/llama-3-8b/experiment1/: report_exp_avg.txt  report_exp_avg_sq.txt  report_weights.txt  summary_exp_avg.txt  summary_exp_avg_sq.txt  summary_weights.txt
scripts/llama-3-8b/experiment2/: report_32bits.txt
src/: ANSCompressor.cpp  MemoryManager.cpp  TensorAnalyzer.cpp  TensorResource.cpp  api.cpp  logging.cpp  python_bindings.cpp  tensor_group_bloom_delta.cpp  tensor_group_codebook.cpp  tensor_group_prefix_mask_repair.cpp
